FEAT : post 기능 추가 및 구조 개선, api 경로 통일